--- a/publications.html
+++ b/publications.html
@@ -22,27 +22,30 @@
 <div id="toptitle">
 <h1>Publications </h1>
 </div>
-<h2>Journal Papers</h2>
+<h2>Preprints</h2>
 <ol reversed>
 <li><p><b>R. Chou</b>, A. Yener, <a href="publications.html">Gaussian Wiretap Channel Models when the Eavesdropper can Arbitrarily Jam</a>,<br /> Submitted to IEEE Transactions on Information Theory, Jun. 2019.<br /> </p>
 </li>
 <li><p><b>R. Chou</b>, M. Bloch, A. Yener, <a href="https://arxiv.org/abs/1808.05612">Universal Covertness for Discrete Memoryless Sources</a>,<br /> Submitted to IEEE Transactions on Information Theory, Jul 2018.</p>
 </li>
-<li><p><b>R. Chou</b>, A. Yener, <a href="https://ieeexplore.ieee.org/document/8862865">Strongly Secure Multiuser Communication and Authentication with Anonymity Constraints</a>,<br /> Accepted to IEEE Transactions on Information Theory, Sep. 2019.</p>
+</ol reversed>
+<h2>Journal Papers</h2>
+<ol reversed>
+<li><p><b>R. Chou</b>, A. Yener, <a href="publications.html">Strongly Secure Multiuser Communication and Authentication with Anonymity Constraints</a>,<br /> IEEE Transactions on Information Theory, 66(1), Jan. 2020.</p>
 </li>
-<li><p><b>R. Chou</b>, A. Yener, <a href="https://arxiv.org/abs/1710.04643">Secret-Key Generation in Many-to-One Networks: An Integrated Game-Theoretic and Information-Theoretic Approach</a>,<br /> IEEE Transactions on Information Theory, 65(8), pp. 5144 - 5159, Aug. 2019.</p>
+<li><p><b>R. Chou</b>, A. Yener, <a href="https://arxiv.org/abs/1710.04643">Secret-Key Generation in Many-to-One Networks: An Integrated Game-Theoretic and Information-Theoretic Approach</a>,<br /> IEEE Transactions on Information Theory, 65(8), Aug. 2019.</p>
 </li>
-<li><p><b>R. Chou</b>, A. Yener, <a href="http://wcan.ee.psu.edu/papers/RC_TIT_18.pdf">Polar Coding for the Multiple Access Wiretap Channel via Rate-Splitting and Cooperative Jamming</a>,<br /> IEEE Transactions on Information Theory, 64(12), pp. 7903 - 7921, Dec. 2018.</p>
+<li><p><b>R. Chou</b>, A. Yener, <a href="http://wcan.ee.psu.edu/papers/RC_TIT_18.pdf">Polar Coding for the Multiple Access Wiretap Channel via Rate-Splitting and Cooperative Jamming</a>,<br /> IEEE Transactions on Information Theory, 64(12), Dec. 2018.</p>
 </li>
-<li><p><b>R. Chou</b>, M. Bloch, J. Kliewer, <a href="https://arxiv.org/abs/1608.08474">Empirical and Strong Coordination via Soft Covering with Polar Codes</a>,<br /> IEEE Transactions on Information Theory, 64(7), pp. 5087 - 5100, Jul. 2018.</p>
+<li><p><b>R. Chou</b>, M. Bloch, J. Kliewer, <a href="https://arxiv.org/abs/1608.08474">Empirical and Strong Coordination via Soft Covering with Polar Codes</a>,<br /> IEEE Transactions on Information Theory, 64(7), Jul. 2018.</p>
 </li>
-<li><p><b>R. Chou</b>, B. Vellambi, M. Bloch, J. Kliewer, <a href="http://arxiv.org/abs/1508.07920">Coding Schemes for Achieving Strong Secrecy at Negligible Cost</a>,<br /> IEEE Transactions on Information Theory, 63(3), pp. 1858 - 1873, Mar. 2017.</p>
+<li><p><b>R. Chou</b>, B. Vellambi, M. Bloch, J. Kliewer, <a href="http://arxiv.org/abs/1508.07920">Coding Schemes for Achieving Strong Secrecy at Negligible Cost</a>,<br /> IEEE Transactions on Information Theory, 63(3), Mar. 2017.</p>
 </li>
-<li><p><b>R. Chou</b>, M. Bloch, <a href="http://arxiv.org/abs/1411.0281">Polar Coding for the Broadcast Channel with Confidential Messages: A Random Binning Analogy</a>,<br /> IEEE Transactions on Information Theory, 62(5), pp. 2410 - 2429, May 2016.</p>
+<li><p><b>R. Chou</b>, M. Bloch, <a href="http://arxiv.org/abs/1411.0281">Polar Coding for the Broadcast Channel with Confidential Messages: A Random Binning Analogy</a>,<br /> IEEE Transactions on Information Theory, 62(5), May 2016.</p>
 </li>
-<li><p><b>R. Chou</b>, M. Bloch, E. Abbe, <a href="https://arxiv.org/abs/1305.4746">Polar Coding for Secret-Key Generation</a>,<br /> IEEE Transactions on Information Theory, 61(11), pp. 6213 - 6237, Nov. 2015.</p>
+<li><p><b>R. Chou</b>, M. Bloch, E. Abbe, <a href="https://arxiv.org/abs/1305.4746">Polar Coding for Secret-Key Generation</a>,<br /> IEEE Transactions on Information Theory, 61(11), Nov. 2015.</p>
 </li>
-<li><p><b>R. Chou</b>, M. Bloch, <a href="https://arxiv.org/abs/1210.4482">Separation of Reliability and Secrecy in Rate-Limited Secret-Key Generation</a>,<br /> IEEE Transactions on Information Theory, 60(8), pp. 4941 - 4957, Aug. 2014.</p>
+<li><p><b>R. Chou</b>, M. Bloch, <a href="https://arxiv.org/abs/1210.4482">Separation of Reliability and Secrecy in Rate-Limited Secret-Key Generation</a>,<br /> IEEE Transactions on Information Theory, 60(8), Aug. 2014.</p>
 </li>
 </ol reversed>
 <h2>Conference Papers</h2>
