--- a/teaching.html
+++ b/teaching.html
@@ -28,7 +28,7 @@
 <p>CS 731 - Mathematical Foundations of Computer Networking (Spring 2019, Spring 2020)</p>
 <p>CS 464 - Computer Networks (Fall 2019)</p>
 <p>CS 736 - Data Communication Networks (Fall 2019) </p>
-<p>EE 898 - Information Theoretic Security (Spring 2020</p>
+<p>EE 898 - Information Theoretic Security (Spring 2020)</p>
 </td>
 </tr>
 </table>
