--- a/group.html
+++ b/group.html
@@ -31,11 +31,11 @@
 <li><p>Vidhi Rana (Doctoral Student, co-advised with Dr. H. Kwon)</p>
 </li>
 </ul>
+<h2>Former Students</h2>
 <ul>
-<li><p>Olusola Odeyomi (Doctoral Student, co-advised with Dr. H. Kwon)</p>
+<li><p>Olusola Odeyomi (Master Student, 2019)</p>
 </li>
 </ul>
-<h2>Former Students</h2>
 <ul>
 <li><p>Carson Wang (Undergraduate Student, 2019)</p>
 </li>
