--- a/group.html
+++ b/group.html
@@ -28,7 +28,7 @@
 </li>
 </ul>
 <ul>
-<li><p>Vidhi Rana (Doctoral Student, co-advised with Dr. H. Kwon)</p>
+<li><p>Vidhi Rana (Doctoral Student)</p>
 </li>
 </ul>
 <h2>Former Students</h2>
