--- a/publications.html
+++ b/publications.html
@@ -24,14 +24,16 @@
 </div>
 <h2>Preprints</h2>
 <ol reversed>
-<li><p>R. Chou, A. Yener, <a href="publications.html">Gaussian Wiretap Channel Models when the Eavesdropper can Arbitrarily Jam</a>,<br /> Submitted to IEEE Transactions on Information Theory, Jun. 2019.<br /> </p>
+<li><p>R. Chou, <a href="https://arxiv.org/abs/2002.01924">Explicit Codes for the Wiretap Channel: A Unified Design Framework</a>, Jan. 2020.<br /></p>
 </li>
-<li><p>R. Chou, M. Bloch, A. Yener, <a href="https://arxiv.org/abs/1808.05612">Universal Covertness for Discrete Memoryless Sources</a>,<br /> Submitted to IEEE Transactions on Information Theory, Jul 2018.</p>
+<li><p>R. Chou, A. Yener, <a href="publications.html">Gaussian Wiretap Channel Models when the Eavesdropper can Arbitrarily Jam</a>, Jun. 2019.<br /> </p>
+</li>
+<li><p>R. Chou, M. Bloch, A. Yener, <a href="https://arxiv.org/abs/1808.05612">Universal Covertness for Discrete Memoryless Sources</a>, Jul 2018.</p>
 </li>
 </ol reversed>
 <h2>Journal Papers</h2>
 <ol reversed>
-<li><p>R. Chou, A. Yener, <a href="publications.html">Strongly Secure Multiuser Communication and Authentication with Anonymity Constraints</a>,<br /> IEEE Transactions on Information Theory, 66(1), Jan. 2020.</p>
+<li><p>R. Chou, A. Yener, <a href="http://wcan.ee.psu.edu/papers/RC_TIT_20.pdf">Strongly Secure Multiuser Communication and Authentication with Anonymity Constraints</a>,<br /> IEEE Transactions on Information Theory, 66(1), Jan. 2020.</p>
 </li>
 <li><p>R. Chou, A. Yener, <a href="https://arxiv.org/abs/1710.04643">Secret-Key Generation in Many-to-One Networks: An Integrated Game-Theoretic and Information-Theoretic Approach</a>,<br /> IEEE Transactions on Information Theory, 65(8), Aug. 2019.</p>
 </li>
@@ -50,6 +52,10 @@
 </ol reversed>
 <h2>Conference Papers</h2>
 <ol reversed>
+<li><p>R. Sultana, R. Chou, <a href="publications.html">Explicit Construction of Multiple Access Channel Resolvability Codes from Source Resolvability Codes</a>,<br /> Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20, Jun. 2020.</p>
+</li>
+<li><p>R. Chou, J. Kliewer, <a href="https://arxiv.org/abs/2001.04241">Distributed Secure Storage: Rate-Privacy Trade-Off and XOR-Based Coding Scheme</a>,<br /> Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20, Jun. 2020.</p>
+</li>
 <li><p>R. Sultana, R. Chou, <a href="papers\allerton19.pdf">Explicit Low-complexity Codes for Multiple Access Channel Resolvability</a>,<br /> Proc. of the 57nd Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;19, Monticello, IL, Sep. 2019.</p>
 </li>
 <li><p>R. Chou, <a href="https://ieeexplore.ieee.org/document/8849439">Biometric Systems with Multiuser Access Structures</a>,<br /> Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;19, Paris, France, Jul. 2019.</p>
