--- a/publications.html
+++ b/publications.html
@@ -28,7 +28,7 @@
 </li>
 <li><p>R. Chou, A. Yener, <a href="publications.html">Gaussian Wiretap Channel Models when the Eavesdropper can Arbitrarily Jam</a>, Jun. 2019.<br /> </p>
 </li>
-<li><p>R. Chou, M. Bloch, A. Yener, <a href="https://arxiv.org/abs/1808.05612">Universal Covertness for Discrete Memoryless Sources</a>, Jul 2018.</p>
+<li><p>R. Chou, M. Bloch, A. Yener, <a href="https://arxiv.org/abs/1808.05612">Universal Covertness for Discrete Memoryless Sources</a>, Jul. 2018.</p>
 </li>
 </ol reversed>
 <h2>Journal Papers</h2>
@@ -54,7 +54,7 @@
 <ol reversed>
 <li><p>R. Sultana, R. Chou, <a href="publications.html">Explicit Construction of Multiple Access Channel Resolvability Codes from Source Resolvability Codes</a>,<br /> Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20, Jun. 2020.</p>
 </li>
-<li><p>R. Chou, J. Kliewer, <a href="https://arxiv.org/abs/2001.04241">Distributed Secure Storage: Rate-Privacy Trade-Off and XOR-Based Coding Scheme</a>,<br /> Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20, Jun. 2020.</p>
+<li><p>R. Chou, J. Kliewer, <a href="https://arxiv.org/abs/2001.04241">Secure Distributed Storage: Rate-Privacy Trade-Off and XOR-Based Coding Scheme</a>,<br /> Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20, Jun. 2020.</p>
 </li>
 <li><p>R. Sultana, R. Chou, <a href="papers\allerton19.pdf">Explicit Low-complexity Codes for Multiple Access Channel Resolvability</a>,<br /> Proc. of the 57nd Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;19, Monticello, IL, Sep. 2019.</p>
 </li>
