--- a/group.html
+++ b/group.html
@@ -24,11 +24,15 @@
 </div>
 <h2>Current Students</h2>
 <ul>
-<li><p>Rumia Sultana (Doctoral Student)</p>
+<li><p>Rumia Sultana (Doctoral Student, 2018 - present)</p>
 </li>
 </ul>
 <ul>
-<li><p>Vidhi Rana (Doctoral Student)</p>
+<li><p>Vidhi Rana (Doctoral Student, 2018 - present)</p>
+</li>
+</ul>
+<ul>
+<li><p>Khoi Le (Undergraduate Student, 2020 - present)</p>
 </li>
 </ul>
 <h2>Former Students</h2>
