--- a/teaching.html
+++ b/teaching.html
@@ -26,8 +26,8 @@
 <p>EE 877 - Information Theoretic Security (Spring 2018)</p>
 <p>CS 898 - Sequential Decision Problems (Fall 2018)</p>
 <p>CS 731 - Mathematical Foundations of Computer Networking (Spring 2019, Spring 2020)</p>
-<p>CS 464 - Computer Networks (Fall 2019)</p>
-<p>CS 736 - Data Communication Networks (Fall 2019) </p>
+<p>CS 464 - Computer Networks (Fall 2019, Fall 2020)</p>
+<p>CS 736 - Data Communication Networks (Fall 2019, Fall 2020) </p>
 <p>CS 898 - Information Theoretic Security (Spring 2020)</p>
 </td>
 </tr>
