--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
 </ol reversed>
 <h2>Conference Papers</h2>
 <ol reversed>
-<li><p>R. Sultana, R. Chou, <a href="publications.html">Explicit Construction of Multiple Access Channel Resolvability Codes from Source Resolvability Codes</a>,<br /> Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20, Jun. 2020.</p>
+<li><p>R. Sultana, R. Chou, <a href="https://ieeexplore.ieee.org/abstract/document/9174255">Explicit Construction of Multiple Access Channel Resolvability Codes from Source Resolvability Codes</a>,<br /> Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20, Jun. 2020.</p>
 </li>
 <li><p>R. Chou, J. Kliewer, <a href="https://arxiv.org/abs/2001.04241">Secure Distributed Storage: Rate-Privacy Trade-Off and XOR-Based Coding Scheme</a>,<br /> Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20, Jun. 2020.</p>
 </li>
