--- a/publications.html
+++ b/publications.html
@@ -24,6 +24,8 @@
 </div>
 <h2>Preprints</h2>
 <ol reversed>
+<li><p>V. Rana, R. Chou, H. Kwon, <a href="https://arxiv.org/abs/2010.07536">Secret Sharing from Correlated Gaussian Random Variables and Public Communication</a>, Oct. 2020.<br /></p>
+</li>
 <li><p>R. Chou, <a href="https://arxiv.org/abs/2002.01924">Explicit Codes for the Wiretap Channel: A Unified Design Framework</a>, Jan. 2020.<br /></p>
 </li>
 <li><p>R. Chou, A. Yener, <a href="publications.html">Gaussian Wiretap Channel Models when the Eavesdropper can Arbitrarily Jam</a>, Jun. 2019.<br /> </p>
