--- a/publications.html
+++ b/publications.html
@@ -28,9 +28,9 @@
 <ol reversed>
 <li><p>V. Rana, R. Chou, H. Kwon, <a href="https://arxiv.org/abs/2010.07536">Secret Sharing from Correlated Gaussian Random Variables and Public Communication</a>, Oct. 2020.<br /></p>
 </li>
-<li><p>R. Chou, <a href="https://arxiv.org/abs/2002.01924">Explicit Codes for the Wiretap Channel: A Unified Design Framework</a>, Jan. 2020.<br /></p>
+<li><p>R. Chou, <a href="https://arxiv.org/abs/2002.01924">Unified Framework for Polynomial-Time Wiretap Channel Codes</a>, Jan. 2020.<br /></p>
 </li>
-<li><p>R. Chou, A. Yener, <a href="publications.html">Gaussian Wiretap Channel Models when the Eavesdropper can Arbitrarily Jam</a>, Jun. 2019.<br /></p>
+<li><p>R. Chou, A. Yener, <a href="publications.html">Gaussian Multiuser Wiretap Channel Models when the Eavesdropper can Arbitrarily Jam</a>, Jun. 2019.<br /></p>
 </li>
 <li><p>R. Chou, M. Bloch, A. Yener, <a href="https://arxiv.org/abs/1808.05612">Universal Covertness for Discrete Memoryless Sources</a>, Jul. 2018.</p>
 </li>
@@ -54,7 +54,7 @@
 </li>
 <li><p>R. Chou, M. Bloch, <a href="https://arxiv.org/abs/1210.4482">Separation of Reliability and Secrecy in Rate-Limited Secret-Key Generation</a>,<br /> IEEE Transactions on Information Theory, 60(8), Aug. 2014.</p>
 </li>
-</ol reversed>
+</ol>
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
