--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="photos/pic3.png" alt="alt text" />&nbsp;</td>
-<td align="left"><p>Rémi A. Chou <br />
-Assistant Professor </p>
-<p><a href="index.html">Department of Electrical Engineering And Computer Science</a> <br />
+<td align="left"><p>Assistant Professor <br />
+
+
+<a href="index.html">Department of Electrical Engineering And Computer Science</a> <br />
 <a href="http://www.wichita.edu/thisis/">Wichita State University</a><br /></p>
 </td></tr></table>
 <h2>About me</h2>
