--- a/info.html
+++ b/info.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Rémi A. Chou</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="group.html">Students</a></div>
+<div class="menu-item"><a href="group.html">Group</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
 </td>
 <td id="layout-content">
