--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
 <td id="layout-menu">
 <div class="menu-category">Rémi A. Chou</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="group.html">Students</a></div>
+<div class="menu-item"><a href="group.html">Group</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
 </td>
 <td id="layout-content">
@@ -92,7 +92,7 @@
 </li>
 <li><p><a href="http://ieeexplore.ieee.org/document/8006871/"><b>The Gaussian Multiple Access Wiretap Channel when the Eavesdropper can Arbitrarily Jam</b></a>,<br /> R. Chou, A. Yener <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;17</i>, Aachen, Germany, Jun. 2017.<br /></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/1808.05612/"><b>Universal Covertness for Discrete Memoryless Sources</b></a>,<br /> R. Chou, M. Bloch, A. Yener <br /> <i>Proc. of the 54th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;16</i>, Monticello, IL, Sep. 2016.<br /></p>
+<li><p><a href="https://arxiv.org/abs/1808.05612"><b>Universal Covertness for Discrete Memoryless Sources</b></a>,<br /> R. Chou, M. Bloch, A. Yener <br /> <i>Proc. of the 54th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;16</i>, Monticello, IL, Sep. 2016.<br /></p>
 </li>
 <li><p><a href="http://ieeexplore.ieee.org/document/7541737/"><b>Multiuser Authentication with Anonymity Constraints over Noisy Channels</b></a>,<br /> R. Chou, A. Yener <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;16</i>, Barcelona, Spain, Jul. 2016.<br /></p>
 </li>
