--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <td align="left"><p>Assistant Professor <br />
 
 
-<a href="index.html">Department of Electrical Engineering And Computer Science</a> <br />
+<a href="index.html">Department of Electrical Engineering and Computer Science</a> <br />
 <a href="http://www.wichita.edu/thisis/">Wichita State University</a><br /></p>
 </td></tr></table>
 <h2>About me</h2>
