--- a/publications.html
+++ b/publications.html
@@ -22,24 +22,28 @@
 </div>
 <h2>Preprints</h2>
 <p><br />
-
-
 </p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2021.<br /></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2110.10307"><b>Distributed Secret Sharing over a Public Channel from Correlated Random Variables</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Oct. 2021.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Pairwise Oblivious Transfer</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Sep. 2021.<br /></p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Mar. 2021.<br /></p>
-</li>
-<li><p><a href="publications.html"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Feb. 2021.<br /></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2010.07536"><b>Secret Sharing from Correlated Gaussian Random Variables and Public Communication</b></a><br /> V. Rana, R. Chou, H. Kwon<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Oct. 2020.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2002.01924"><b>Unified Framework for Polynomial-Time Wiretap Channel Codes</b></a><br /> R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jan. 2020.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Gaussian Multiuser Wiretap Channel Models when the Eavesdropper can Arbitrarily Jam</b></a><br /> R. Chou, A. Yener <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jun. 2019.<br /></p>
+<li><p><a href="publications.html"><b>Gaussian Multiuser Wiretap Channels when the Eavesdropper can Arbitrarily Jam</b></a><br /> R. Chou, A. Yener <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jun. 2019.<br /></p>
 </li>
-</ol>
+</ol reversed>
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> to appear in <i>IEEE Transactions on Information Theory</i>.<br /></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2010.07536"><b>Information-Theoretic Secret Sharing from Correlated Gaussian Random Variables and Public Communication</b></a><br /> V. Rana, R. Chou, H. Kwon<br /> to appear in <i>IEEE Transactions on Information Theory</i>.<br /></p>
+</li>
 <li><p><a href="https://arxiv.org/abs/1808.05612"><b>Universal Covertness for Discrete Memoryless Sources</b></a>,<br /> R. Chou, M. Bloch, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 67(8), Aug. 2021. <br /></p>
 </li>
 <li><p><a href="http://wcan.ee.psu.edu/papers/RC_TIT_20.pdf"><b>Strongly Secure Multiuser Communication and Authentication with Anonymity Constraints</b></a>,<br /> R. Chou, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 66(1), Jan. 2020. <br /></p>
@@ -58,13 +62,15 @@
 </li>
 <li><p><a href="https://arxiv.org/abs/1210.4482"><b>Separation of Reliability and Secrecy in Rate-Limited Secret-Key Generation</b></a>,<br /> R. Chou, M. Bloch <br /> <i>IEEE Transactions on Information Theory</i>, 60(8), Aug. 2014.</p>
 </li>
-</ol>
+</ol reversed>
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;21</i>, Melbourne, Australia, Jul. 2021.<br /></p>
+<li><p><a href="publications.html"><b>Design of Short Blocklength Wiretap Channel Codes: Deep Learning and Cryptography Working Hand in Hand</b></a>,<br /> V. Rana, R. Chou <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;21</i>, Kanazawa, Japan, Oct. 2021.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Low-Complexity Secret Sharing Schemes Using Correlated Random Variables and Rate-Limited Public Communication</b></a>,<br /> R. Sultana, R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;21</i>, Melbourne, Australia, Jul. 2021.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/9517802"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;21</i>, Melbourne, Australia, Jul. 2021.<br /></p>
+</li>
+<li><p><a href="https://ieeexplore.ieee.org/document/9517753"><b>Low-Complexity Secret Sharing Schemes Using Correlated Random Variables and Rate-Limited Public Communication</b></a>,<br /> R. Sultana, R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;21</i>, Melbourne, Australia, Jul. 2021.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/abstract/document/9457601"><b>Pairwise Oblivious Transfer</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;20</i>, Riva del Garda, Italy, Apr. 2021.<br /></p>
 </li>
@@ -122,7 +128,7 @@
 </li>
 <li><p><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5977602"><b>Performance Evaluation for Particle Filters</b></a>,<br /> R. Chou, Y. Boers, M. Podt, M. Geist <br /> <i>Proc. of the 14th International Conference on Information Fusion, Fusion&rsquo;11</i>, Chicago, IL, Jul. 2011.<br /><br /></p>
 </li>
-</ol>
+</ol reversed>
 </td>
 </tr>
 </table>
