--- a/publications.html
+++ b/publications.html
@@ -40,9 +40,9 @@
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> to appear in <i>IEEE Transactions on Information Theory</i>.<br /></p>
+<li><p><a href="publications.html"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, to appear.<br /></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2010.07536"><b>Information-Theoretic Secret Sharing from Correlated Gaussian Random Variables and Public Communication</b></a><br /> V. Rana, R. Chou, H. Kwon<br /> to appear in <i>IEEE Transactions on Information Theory</i>.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2010.07536"><b>Information-Theoretic Secret Sharing from Correlated Gaussian Random Variables and Public Communication</b></a><br /> V. Rana, R. Chou, H. Kwon<br />  <i>IEEE Transactions on Information Theory</i>, to appear.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/1808.05612"><b>Universal Covertness for Discrete Memoryless Sources</b></a>,<br /> R. Chou, M. Bloch, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 67(8), Aug. 2021. <br /></p>
 </li>
