--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 </li>
 </ul>
 <h2>Contact</h2>
-<p>1845 Fairmount St. <br />
-Wichita, KS 67260 <br />
+<p>1845 Fairmount St., Wichita, KS 67260 <br />
 Office:  209 Jabara Hall <br />
 
 
