--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 <ol reversed>
 <li><p><a href="publications.html"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, to appear.<br /></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2010.07536"><b>Information-Theoretic Secret Sharing from Correlated Gaussian Random Variables and Public Communication</b></a><br /> V. Rana, R. Chou, H. Kwon<br />  <i>IEEE Transactions on Information Theory</i>, to appear.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2010.07536"><b>Information-Theoretic Secret Sharing from Correlated Gaussian Random Variables and Public Communication</b></a><br /> V. Rana, R. Chou, H. Kwon<br />  <i>IEEE Transactions on Information Theory</i>, 68(1), Jan. 2022.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/1808.05612"><b>Universal Covertness for Discrete Memoryless Sources</b></a>,<br /> R. Chou, M. Bloch, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 67(8), Aug. 2021. <br /></p>
 </li>
@@ -66,7 +66,7 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Design of Short Blocklength Wiretap Channel Codes: Deep Learning and Cryptography Working Hand in Hand</b></a>,<br /> V. Rana, R. Chou <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;21</i>, Kanazawa, Japan, Oct. 2021.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/abstract/document/9611401"><b>Design of Short Blocklength Wiretap Channel Codes: Deep Learning and Cryptography Working Hand in Hand</b></a>,<br /> V. Rana, R. Chou <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;21</i>, Kanazawa, Japan, Oct. 2021.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/9517802"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;21</i>, Melbourne, Australia, Jul. 2021.<br /></p>
 </li>
