--- a/publications.html
+++ b/publications.html
@@ -30,8 +30,6 @@
 </li>
 <li><p><a href="publications.html"><b>Pairwise Oblivious Transfer</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Sep. 2021.<br /></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Mar. 2021.<br /></p>
-</li>
 <li><p><a href="https://arxiv.org/abs/2002.01924"><b>Unified Framework for Polynomial-Time Wiretap Channel Codes</b></a><br /> R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jan. 2020.<br /></p>
 </li>
 <li><p><a href="publications.html"><b>Gaussian Multiuser Wiretap Channels when the Eavesdropper can Arbitrarily Jam</b></a><br /> R. Chou, A. Yener <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jun. 2019.<br /></p>
@@ -40,7 +38,9 @@
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, to appear.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, to appear.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, 68(3), Mar. 2022.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2010.07536"><b>Information-Theoretic Secret Sharing from Correlated Gaussian Random Variables and Public Communication</b></a><br /> V. Rana, R. Chou, H. Kwon<br />  <i>IEEE Transactions on Information Theory</i>, 68(1), Jan. 2022.<br /></p>
 </li>
