--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@
 <ol reversed>
 <li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, to appear.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, 68(3), Mar. 2022.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2201.11899"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, 68(3), Mar. 2022.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2010.07536"><b>Information-Theoretic Secret Sharing from Correlated Gaussian Random Variables and Public Communication</b></a><br /> V. Rana, R. Chou, H. Kwon<br />  <i>IEEE Transactions on Information Theory</i>, 68(1), Jan. 2022.<br /></p>
 </li>
