--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, to appear.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, 68(6), Jun. 2022.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2201.11899"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, 68(3), Mar. 2022.<br /></p>
 </li>
