--- a/publications.html
+++ b/publications.html
@@ -22,22 +22,24 @@
 </div>
 <h2>Preprints</h2>
 <p><br />
+
 </p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2021.<br /></p>
+<li><p><a href="publications.html"><b>Secure Source Coding Resilient Against Compromised Users via an Access Structure</b></a><br />  H. ZivariFard, R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jun. 2022.<br /></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2206.03477"><b>Short Blocklength Wiretap Channel Codes via Deep Learning: Design and Performance Evaluation</b></a><br />  V. Rana, R. Chou<br /> submitted to <i>IEEE Transactions on Communications</i>, May. 2022.<br /> </p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2002.01924"><b>Explicit Codes for the Wiretap Channel with Uncertainty on the Eavesdropper's Channel</b></a><br /> R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, Nov. 2021.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2110.10307"><b>Distributed Secret Sharing over a Public Channel from Correlated Random Variables</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Oct. 2021.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Pairwise Oblivious Transfer</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Sep. 2021.<br /></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2002.01924"><b>Unified Framework for Polynomial-Time Wiretap Channel Codes</b></a><br /> R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jan. 2020.<br /></p>
-</li>
-<li><p><a href="publications.html"><b>Gaussian Multiuser Wiretap Channels when the Eavesdropper can Arbitrarily Jam</b></a><br /> R. Chou, A. Yener <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jun. 2019.<br /></p>
-</li>
 </ol reversed>
 <h2>Journal Papers</h2>
-<p><br /></p>
+<p><br />
+</p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a><br />  R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, to appear, 2022.<br /></p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, 68(6), Jun. 2022.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2201.11899"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a><br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, 68(3), Mar. 2022.<br /></p>
@@ -66,6 +68,10 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;22</i>, Espoo, Finland, Jun. 2022.<br /></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2201.11891"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;22</i>, Espoo, Finland, Jun. 2022.<br /></p>
+</li>
 <li><p><a href="https://ieeexplore.ieee.org/abstract/document/9611401"><b>Design of Short Blocklength Wiretap Channel Codes: Deep Learning and Cryptography Working Hand in Hand</b></a>,<br /> V. Rana, R. Chou <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;21</i>, Kanazawa, Japan, Oct. 2021.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/9517802"><b>Private Classical Communication over Quantum Multiple-Access Channels</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;21</i>, Melbourne, Australia, Jul. 2021.<br /></p>
