--- a/group.html
+++ b/group.html
@@ -20,46 +20,50 @@
 <div id="toptitle">
 <h1>Group</h1>
 </div>
-<h2>Current Students</h2>
+<h2>Current Members</h2>
 <ul>
-<li><p>Rumia Sultana (Doctoral Student, 2018 - present)</p>
+<li><p>Vidhi Rana (Doctoral student)</p>
 </li>
 </ul>
 <ul>
-<li><p>Vidhi Rana (Doctoral Student, 2018 - present)</p>
-</li>
-</ul>
-<h2>Former Students</h2>
-<ul>
-<li><p>Jonathan Medina Mireles (Undergraduate Student, Spring 2021)</p>
+<li><p>Rumia Sultana (Doctoral student)</p>
 </li>
 </ul>
 <ul>
-<li><p>Khoi Le (Undergraduate Student, Fall 2020)</p>
+<li><p>Dr. Hassan ZivariFard (Postdoctoral research associate)</p>
+</li>
+</ul>
+<h2>Former Members</h2>
+<ul>
+<li><p>Jonathan Medina Mireles (Undergraduate student, Spring 2021)</p>
 </li>
 </ul>
 <ul>
-<li><p>Olusola Odeyomi (Master Student, 2019)</p>
+<li><p>Khoi Le (Undergraduate student, Fall 2020)</p>
 </li>
 </ul>
 <ul>
-<li><p>Carson Wang (Undergraduate Student, Summer 2019)</p>
+<li><p>Olusola Odeyomi (Master student, 2019)</p>
 </li>
 </ul>
 <ul>
-<li><p>Christopher Gravelle (Undergraduate Student, Summer 2019)</p>
+<li><p>Carson Wang (Undergraduate student, Summer 2019)</p>
 </li>
 </ul>
 <ul>
-<li><p>Antara Chowdhury (Master Student, 2018)</p>
+<li><p>Christopher Gravelle (Undergraduate student, Summer 2019)</p>
 </li>
 </ul>
 <ul>
-<li><p>Ezekiel Kuenzi (Undergraduate Student, Summer 2018)</p>
+<li><p>Antara Chowdhury (Master student, 2018)</p>
 </li>
 </ul>
 <ul>
-<li><p>Christopher Hess (Undergraduate Student, Summer 2018)</p>
+<li><p>Ezekiel Kuenzi (Undergraduate student, Summer 2018)</p>
+</li>
+</ul>
+<ul>
+<li><p>Christopher Hess (Undergraduate student, Summer 2018)</p>
 </li>
 </ul>
 </td>
