--- a/group.html
+++ b/group.html
@@ -22,15 +22,19 @@
 </div>
 <h2>Current Members</h2>
 <ul>
-<li><p>Vidhi Rana (Doctoral student)</p>
+<li><p>Srilekha Dodda</p>
 </li>
 </ul>
 <ul>
-<li><p>Rumia Sultana (Doctoral student)</p>
+<li><p>Vidhi Rana</p>
 </li>
 </ul>
 <ul>
-<li><p>Dr. Hassan ZivariFard (Postdoctoral research associate)</p>
+<li><p>Rumia Sultana</p>
+</li>
+</ul>
+<ul>
+<li><p>Dr. Hassan ZivariFard</p>
 </li>
 </ul>
 <h2>Former Members</h2>
