--- a/publications.html
+++ b/publications.html
@@ -25,20 +25,26 @@
 
 </p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Secure Distributed Storage: Optimal Trade-Off Between
+Storage Rate and Privacy Leakage</b></a><br />  R. Chou, J. Kliewer <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2022.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Secret Sharing Schemes from Correlated Random Variables and Rate-Limited Public Communication</b></a><br />  R. Sultana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, Nov. 2022.<br /> </p>
+</li>
 <li><p><a href="publications.html"><b>Secure Source Coding Resilient Against Compromised Users via an Access Structure</b></a><br />  H. ZivariFard, R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jun. 2022.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2206.03477"><b>Short Blocklength Wiretap Channel Codes via Deep Learning: Design and Performance Evaluation</b></a><br />  V. Rana, R. Chou<br /> submitted to <i>IEEE Transactions on Communications</i>, May. 2022.<br /> </p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2002.01924"><b>Explicit Codes for the Wiretap Channel with Uncertainty on the Eavesdropper's Channel</b></a><br /> R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, Nov. 2021.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2110.10307"><b>Distributed Secret Sharing over a Public Channel from Correlated Random Variables</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Oct. 2021.<br /></p>
 </li>
 </ol reversed>
 <h2>Journal Papers</h2>
-<p><br />
-</p>
+<p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a><br />  R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, to appear, 2022.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2207.13681"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a><br />  R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, 68(11), Nov. 2022.<br /></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2002.01924"><b>Explicit Wiretap Channel Codes via Source Coding, Universal Hashing, and Distribution Approximation, When the Channels’ Statistics are Uncertain</b></a><br /> R. Chou<br /> <i>IEEE Transactions on Information Forensics and Security</i>, 17, Nov. 2022.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Gaussian Multiuser Wiretap Channels in the Presence of a Jammer-aided Eavesdropper</b></a><br /> R. Chou, A. Yener <br />  <i>Entropy: Special Issue on Information Theoretic Methods for Future Communication Systems</i>, 24(11), Nov. 2022, Invited paper.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, 68(6), Jun. 2022.<br /></p>
 </li>
@@ -68,7 +74,11 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;22</i>, Espoo, Finland, Jun. 2022.<br /></p>
+<li><p><a href="publications.html"><b>Secure Data Storage Resilient Against Compromised Users via an Access Structure</b></a><br />  H. ZivariFard, R. Chou<br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;22</i>, Mumbai, India, Nov. 2022.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Commitment over Multiple-Access Channels</b></a>,<br /> R. Chou, M. Bloch, A. Yener <br /> <i>Proc. of the 58th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;22</i>, Monticello, IL, Sep. 2022.<br /></p>
+</li>
+<li><p><a href="https://ieeexplore.ieee.org/document/9834900"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;22</i>, Espoo, Finland, Jun. 2022.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2201.11891"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;22</i>, Espoo, Finland, Jun. 2022.<br /></p>
 </li>
@@ -86,7 +96,7 @@
 </li>
 <li><p><a href="https://arxiv.org/abs/2001.04241"><b>Secure Distributed Storage: Rate-Privacy Trade-Off and XOR-Based Coding Scheme</b></a>,<br /> R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20</i>, Los Angeles, CA, Jun. 2020.<br /></p>
 </li>
-<li><p><a href="papers\allerton19.pdf"><b>Explicit Low-complexity Codes for Multiple Access Channel Resolvability</b></a>,<br /> R. Sultana, R. Chou <br /> <i>Proc. of the 57nd Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;19</i>, Monticello, IL, Sep. 2019.<br /></p>
+<li><p><a href="papers\allerton19.pdf"><b>Explicit Low-complexity Codes for Multiple Access Channel Resolvability</b></a>,<br /> R. Sultana, R. Chou <br /> <i>Proc. of the 57th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;19</i>, Monticello, IL, Sep. 2019.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/8849439"><b>Biometric Systems with Multiuser Access Structures</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;19</i>, Paris, France, Jul. 2019.<br /></p>
 </li>
@@ -110,7 +120,7 @@
 </li>
 <li><p><a href="http://ieeexplore.ieee.org/document/7541446/"><b>Polar Coding for the Multiple Access Wiretap Channel via Rate-Splitting and Cooperative Jamming</b></a>,<br /> R. Chou, A. Yener <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;16</i>, Barcelona, Spain, Jul. 2016.<br /></p>
 </li>
-<li><p><a href="papers\allerton15.pdf"><b>Using Deterministic Decisions for Low-Entropy Bits in the Encoding and Decoding of Polar Codes</b></a>,<br /> R. Chou, M. Bloch <br /> <i>Proc. of the 53nd Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;15</i>, Monticello, IL, Oct. 2015.<br /></p>
+<li><p><a href="papers\allerton15.pdf"><b>Using Deterministic Decisions for Low-Entropy Bits in the Encoding and Decoding of Polar Codes</b></a>,<br /> R. Chou, M. Bloch <br /> <i>Proc. of the 53rd Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;15</i>, Monticello, IL, Oct. 2015.<br /></p>
 </li>
 <li><p><a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7282708"><b>Polar Coding for Empirical and Strong Coordination via Distribution Approximation</b></a>,<br /> R. Chou, M. Bloch, J. Kliewer <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;15</i>, Hong Kong, Jun. 2015.<br /></p>
 </li>
