--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,7 @@ Storage Rate and Privacy Leakage</b></a><br />  R. Chou, J. Kliewer <br /> submi
 </li>
 <li><p><a href="https://arxiv.org/abs/2002.01924"><b>Explicit Wiretap Channel Codes via Source Coding, Universal Hashing, and Distribution Approximation, When the Channels’ Statistics are Uncertain</b></a><br /> R. Chou<br /> <i>IEEE Transactions on Information Forensics and Security</i>, 17, Nov. 2022.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Gaussian Multiuser Wiretap Channels in the Presence of a Jammer-aided Eavesdropper</b></a><br /> R. Chou, A. Yener <br />  <i>Entropy: Special Issue on Information Theoretic Methods for Future Communication Systems</i>, 24(11), Nov. 2022, Invited paper.<br /></p>
+<li><p><a href="https://www.mdpi.com/1099-4300/24/11/1595/htm"><b>Gaussian Multiuser Wiretap Channels in the Presence of a Jammer-aided Eavesdropper</b></a><br /> R. Chou, A. Yener <br />  <i>Entropy: Special Issue on Information Theoretic Methods for Future Communication Systems</i>, 24(11), Nov. 2022, Invited paper.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, 68(6), Jun. 2022.<br /></p>
 </li>
@@ -76,7 +76,7 @@ Storage Rate and Privacy Leakage</b></a><br />  R. Chou, J. Kliewer <br /> submi
 <ol reversed>
 <li><p><a href="publications.html"><b>Secure Data Storage Resilient Against Compromised Users via an Access Structure</b></a><br />  H. ZivariFard, R. Chou<br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;22</i>, Mumbai, India, Nov. 2022.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Commitment over Multiple-Access Channels</b></a>,<br /> R. Chou, M. Bloch, A. Yener <br /> <i>Proc. of the 58th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;22</i>, Monticello, IL, Sep. 2022.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/9929405"><b>Commitment over Multiple-Access Channels</b></a>,<br /> R. Chou, M. Bloch <br /> <i>Proc. of the 58th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;22</i>, Monticello, IL, Sep. 2022.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/9834900"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;22</i>, Espoo, Finland, Jun. 2022.<br /></p>
 </li>
