--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h2>Announcement</h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p><b>A PhD position is available</b> in my group. Prospective students, more information <a href="info.html">here</a>.</p>
+<p><b>Multiple Ph.D. positions are available</b> in my group. Prospective students, more information <a href="info.html">here</a>.</p>
 </div></div>
 <h2>Research interests</h2>
 <ul>
