--- a/info.html
+++ b/info.html
@@ -20,7 +20,7 @@
 <div id="toptitle">
 <h1>PhD position available</h1>
 </div>
-<p>I have an opening for a fully funded PhD position. If you are interested in joining my research group, please send me your resume with your transcripts, as well as a detailed description of your mathematical background. A minimum requirement is to have taken an advanced probability class and a real analysis class in a mathematics department. Please also provide in your resume contact information for references that could write a recommendation letter for you (preferably mathematics professors). Mathematics students with no engineering background are also encouraged to apply.</p>
+<p>I have multiple openings for fully funded Ph.D. positions. If you are interested in joining my research group, please send me your resume with your transcripts. Please also provide in your resume contact information for references that could write a recommendation letter for you (preferably mathematics professors).  </p>
 <p>Due to the high number of applications I receive, it is for me impossible to reply to all applicants. Please do not feel offended.</p>
 </td>
 </tr>
