--- a/group.html
+++ b/group.html
@@ -33,11 +33,11 @@
 <li><p>Rumia Sultana</p>
 </li>
 </ul>
+<h2>Former Members</h2>
 <ul>
-<li><p>Dr. Hassan ZivariFard</p>
+<li><p>Dr. Hassan ZivariFard (Postdoctoral researcher, 2022)</p>
 </li>
 </ul>
-<h2>Former Members</h2>
 <ul>
 <li><p>Jonathan Medina Mireles (Undergraduate student, Spring 2021)</p>
 </li>
