--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
 <h1>Rémi A. Chou</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="photos/pic3.png" alt="alt text" />&nbsp;</td>
+<img src="photos/pic3.jpeg" alt="alt text" />&nbsp;</td>
 <td align="left"><p>Assistant Professor <br />
 
 
-<a href="index.html">Department of Electrical Engineering and Computer Science</a> <br />
-<a href="http://www.wichita.edu/thisis/">Wichita State University</a><br /></p>
+
+<a href="index.html">Starting Fall 2023 &ndash; CSE department at the University of Texas at Arlington</a><br /></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am an Assistant Professor in Electrical Engineering and Computer Science at Wichita State University. From 2015 to 2017, I was a postdoctoral researcher at the <a href="http://www.ee.psu.edu/">Pennsylvania State University</a>, University Park, PA. I received the Ph.D. degree in Electrical Engineering from the <a href="https://www.ece.gatech.edu">Georgia Institute of Technology</a>, Atlanta, GA, in 2015, and the Engineering degree from <a href="http://www.centralesupelec.fr/en">Supélec</a>, Gif-sur-Yvette, France in 2011.<br /></p>
+<p>I am an Assistant Professor in Electrical Engineering and Computer Science at Wichita State University, Wichita, KS. 
+From 2015 to 2017, I was a postdoctoral researcher at the <a href="http://www.ee.psu.edu/">Pennsylvania State University</a>, University Park, PA. I received the Ph.D. degree in Electrical Engineering from the <a href="https://www.ece.gatech.edu">Georgia Institute of Technology</a>, Atlanta, GA, in 2015, and the Engineering degree from <a href="http://www.centralesupelec.fr/en">Supélec</a>, Gif-sur-Yvette, France in 2011.<br /></p>
 <p>My research is supported by an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2047913">NSF-CAREER award</a>, an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1850227">NSF-CRII award</a>, an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2201825">NSF-CIF Collaborative Research award</a>, and an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2226447">NSF Convergence Accelerator award</a>.</p>
 <h2>Announcement</h2>
 <div class="infoblock">
@@ -48,11 +49,7 @@
 </li>
 </ul>
 <h2>Contact</h2>
-<p>1845 Fairmount St., Wichita, KS 67260 <br />
-Office:  209 Jabara Hall <br />
-
-
-E-mail: remi [dot] chou [at] wichita [dot] edu</p>
+<p>E-mail: remi [dot] chou [at] wichita [dot] edu</p>
 </td>
 </tr>
 </table>
