--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ From 2015 to 2017, I was a postdoctoral researcher at the <a href="http://www.ee
 </li>
 </ul>
 <h2>Contact</h2>
-<p>E-mail: remi [dot] chou [at] wichita [dot] edu</p>
+<p>E-mail: remi [dot] chou [at] uta [dot] edu</p>
 </td>
 </tr>
 </table>
