--- a/publications.html
+++ b/publications.html
@@ -23,28 +23,28 @@
 <h2>Preprints</h2>
 <p><br />
 
+
 </p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Secure Distributed Storage: Optimal Trade-Off Between
-Storage Rate and Privacy Leakage</b></a><br />  R. Chou, J. Kliewer <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2022.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2308.12374"><b>Private Information Retrieval with Private Noisy Side Information</b></a><br />  H. ZivariFard, R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jan. 2023.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Secret Sharing Schemes from Correlated Random Variables and Rate-Limited Public Communication</b></a><br />  R. Sultana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, Nov. 2022.<br /> </p>
+<li><p><a href="publications.html"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a><br />  R. Chou, A. Yener <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jan. 2023.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Secure Source Coding Resilient Against Compromised Users via an Access Structure</b></a><br />  H. ZivariFard, R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jun. 2022.<br /></p>
+<li><p><a href="publications.html"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a><br />  R. Chou, J. Kliewer <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2022.<br /></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2110.10307"><b>Distributed Secret Sharing over a Public Channel from Correlated Random Variables</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Oct. 2021.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2110.10307"><b>Distributed Secret Sharing over a Public Channel from Correlated Random Variables</b></a><br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Oct. 2022.<br /></p>
 </li>
 </ol reversed>
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="https://arxiv.org/abs/2206.03477"><b>Short Blocklength Wiretap Channel Codes via Deep Learning: Design and Performance Evaluation</b></a><br />  V. Rana, R. Chou<br /> to appear in <i>IEEE Transactions on Communications</i>,  2023.<br /> </p>
+<li><p><a href="https://arxiv.org/abs/2206.03477"><b>Short Blocklength Wiretap Channel Codes via Deep Learning: Design and Performance Evaluation</b></a><br />  V. Rana, R. Chou<br /> <i>IEEE Transactions on Communications</i>, 71(3), Mar. 2023.<br /> </p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2002.01924"><b>Explicit Wiretap Channel Codes via Source Coding, Universal Hashing, and Distribution Approximation, When the Channels’ Statistics are Uncertain</b></a><br /> R. Chou<br /> <i>IEEE Transactions on Information Forensics and Security</i>, 18, 2023.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2207.13681"><b>Quantifying the Cost of Privately Storing Data in Distributed Storage Systems</b></a><br />  R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, 68(11), Nov. 2022.<br /></p>
 </li>
-<li><p><a href="https://www.mdpi.com/1099-4300/24/11/1595/htm"><b>Gaussian Multiuser Wiretap Channels in the Presence of a Jammer-aided Eavesdropper</b></a><br /> R. Chou, A. Yener <br />  <i>Entropy: Special Issue on Information Theoretic Methods for Future Communication Systems</i>, 24(11), Nov. 2022, Invited paper.<br /></p>
+<li><p><a href="https://www.mdpi.com/1099-4300/24/11/1595/htm"><b>Gaussian Multiuser Wiretap Channels in the Presence of a Jammer-aided Eavesdropper</b></a><br /> R. Chou, A. Yener <br />  <i>Entropy: Special Issue on Information Theoretic Methods for Future Communication Systems</i>, 24(11), Nov. 2022, invited paper.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2103.10430"><b>Multiple Access Channel Resolvability Codes from Source Resolvability Codes</b></a> <br /> R. Sultana, R. Chou<br />  <i>IEEE Transactions on Information Theory</i>, 68(6), Jun. 2022.<br /></p>
 </li>
@@ -74,6 +74,16 @@ Storage Rate and Privacy Leakage</b></a><br />  R. Chou, J. Kliewer <br /> submi
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="https://ieeexplore.ieee.org/document/10206726"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a><br />  R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;23</i>, Taipei, Taiwan, Jun. 2023.<br /></p>
+</li>
+<li><p><a href="https://ieeexplore.ieee.org/document/10206773"><b>Secret Sharing over a Gaussian Broadcast Channel: Optimal Coding Scheme Design and Deep Learning Approach at Short Blocklength</b></a><br />  R. Sultana, V. Rana, R. Chou<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;23</i>, Taipei, Taiwan, Jun. 2023.<br /></p>
+</li>
+<li><p><a href="https://ieeexplore.ieee.org/document/10206733"><b>Private Information Retrieval When Private Noisy Side Information is Available</b></a><br />  H. ZivariFard, R. Chou<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;23</i>, Taipei, Taiwan, Jun. 2023.<br /></p>
+</li>
+<li><p><a href="https://ieeexplore.ieee.org/document/10161683"><b>Retractable Commitment Over Noisy Channels</b></a>,<br /> R. Chou, M. Bloch <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;23</i>, Saint-Malo, France, Apr. 2023.<br /></p>
+</li>
+<li><p><a href="https://ieeexplore.ieee.org/document/10143116"><b>Adaptive Frequency Hopping for 5G New Radio mMTC Security</b></a><br />  W. Chan, H. Kwon, R. Chou, D. Love, S. Fahmy, S. Rafiul Hussain, S. Kim, C. Vander Valk, C. Brinton, V. Marojevic, K. Pham, T. Kim<br /> <i>Proc. of the 24th Annual International Conference on Industrial Technology (ICIT)</i>, Orlando, FL, Apr. 2023.<br /></p>
+</li>
 <li><p><a href="https://ieeexplore.ieee.org/document/9965904"><b>Secure Data Storage Resilient Against Compromised Users via an Access Structure</b></a><br />  H. ZivariFard, R. Chou<br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;22</i>, Mumbai, India, Nov. 2022.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/9929405"><b>Commitment over Multiple-Access Channels</b></a>,<br /> R. Chou, M. Bloch <br /> <i>Proc. of the 58th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;22</i>, Monticello, IL, Sep. 2022.<br /></p>
