--- a/group.html
+++ b/group.html
@@ -22,52 +22,32 @@
 </div>
 <h2>Current Members</h2>
 <ul>
-<li><p>Srilekha Dodda</p>
+<li><p>Maryam Keshvari</p>
+</li>
+</ul>
+<ul>
+<li><p>Amirhosein Morteza</p>
+</li>
+</ul>
+<ul>
+<li><p>Amir Hossein Shekofteh</p>
 </li>
 </ul>
 <ul>
 <li><p>Vidhi Rana</p>
 </li>
 </ul>
-<ul>
-<li><p>Rumia Sultana</p>
-</li>
-</ul>
 <h2>Former Members</h2>
 <ul>
-<li><p>Dr. Hassan ZivariFard (Postdoctoral researcher, 2022)</p>
+<li><p>Rumia Sultana, Ph.D. 2023, joined Embry-Riddle Aeronautical University as an assistant professor</p>
 </li>
 </ul>
 <ul>
-<li><p>Jonathan Medina Mireles (Undergraduate student, Spring 2021)</p>
+<li><p>Srilekha Dodda, M.Sc. 2023, joined Wichita State University University as a Ph.D. student</p>
 </li>
 </ul>
 <ul>
-<li><p>Khoi Le (Undergraduate student, Fall 2020)</p>
-</li>
-</ul>
-<ul>
-<li><p>Olusola Odeyomi (Master student, 2019)</p>
-</li>
-</ul>
-<ul>
-<li><p>Carson Wang (Undergraduate student, Summer 2019)</p>
-</li>
-</ul>
-<ul>
-<li><p>Christopher Gravelle (Undergraduate student, Summer 2019)</p>
-</li>
-</ul>
-<ul>
-<li><p>Antara Chowdhury (Master student, 2018)</p>
-</li>
-</ul>
-<ul>
-<li><p>Ezekiel Kuenzi (Undergraduate student, Summer 2018)</p>
-</li>
-</ul>
-<ul>
-<li><p>Christopher Hess (Undergraduate student, Summer 2018)</p>
+<li><p>Dr. Hassan ZivariFard, postdoctoral researcher 2022, joined Columbia University as a postdoctoral researcher</p>
 </li>
 </ul>
 </td>
