--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 <td align="left"><p>Assistant Professor <br />
 
 
-
-<a href="https://www.uta.edu/academics/faculty/profile?username=chour">Starting Fall 2023 &ndash; CSE department at the University of Texas at Arlington</a><br /></p>
+<a href="https://www.uta.edu/academics/schools-colleges/engineering/academics/departments/cse">Department of Computer Science and Engineering</a> <br />
+<a href="https://www.uta.edu/">University of Texas at Arlington</a><br /></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am an Assistant Professor in Electrical Engineering and Computer Science at Wichita State University, Wichita, KS. 
+<p>I am an Assistant Professor in Computer Science and Engineering at The University of Texas at Arlington. 
+From 2017 to 2023, I was an Assistant Professor in Electrical Engineering and Computer Science at Wichita State University, Wichita, KS. 
+
 From 2015 to 2017, I was a postdoctoral researcher at the <a href="http://www.ee.psu.edu/">Pennsylvania State University</a>, University Park, PA. I received the Ph.D. degree in Electrical Engineering from the <a href="https://www.ece.gatech.edu">Georgia Institute of Technology</a>, Atlanta, GA, in 2015, and the Engineering degree from <a href="http://www.centralesupelec.fr/en">Supélec</a>, Gif-sur-Yvette, France in 2011.<br /></p>
 <p>My research is supported by an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2047913">NSF-CAREER award</a>, an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1850227">NSF-CRII award</a>, an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2201825">NSF-CIF Collaborative Research award</a>, and an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2226447">NSF Convergence Accelerator award</a>.</p>
 <h2>Announcement</h2>
