--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ From 2015 to 2017, I was a postdoctoral researcher at the <a href="http://www.ee
 <div class="blockcontent">
 <p><b>Multiple Ph.D. positions are available</b> in my group. Prospective students, more information <a href="info.html">here</a>.</p>
 </div></div>
+<div class="infoblock">
+<div class="blockcontent">
+<p><b>Multiple Postdoc positions are available</b> in my group. Prospective applicants, more information <a href="info2.html">here</a>.</p>
+</div></div>
 <h2>Research interests</h2>
 <ul>
 <li><p>Information theory</p>
