--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <a href="https://www.uta.edu/academics/schools-colleges/engineering/academics/departments/cse">Department of Computer Science and Engineering</a> <br />
-<a href="https://www.uta.edu/">University of Texas at Arlington</a><br /></p>
+<a href="https://www.uta.edu/">The University of Texas at Arlington</a><br /></p>
 </td></tr></table>
 <h2>About me</h2>
 <p>I am an Assistant Professor in Computer Science and Engineering at The University of Texas at Arlington. 
