--- a/group.html
+++ b/group.html
@@ -43,7 +43,7 @@
 </li>
 </ul>
 <ul>
-<li><p>Srilekha Dodda, M.Sc. 2023, joined Wichita State University University as a lecturer</p>
+<li><p>Srilekha Dodda, M.Sc. 2023, joined Wichita State University as a lecturer</p>
 </li>
 </ul>
 <ul>
