--- a/group.html
+++ b/group.html
@@ -39,15 +39,15 @@
 </ul>
 <h2>Former Members</h2>
 <ul>
-<li><p>Rumia Sultana, Ph.D. 2023, joined Embry-Riddle Aeronautical University as an assistant professor</p>
+<li><p>Rumia Sultana, Ph.D. 2023, joined <i>Embry-Riddle Aeronautical University</i> as an assistant professor</p>
 </li>
 </ul>
 <ul>
-<li><p>Srilekha Dodda, M.Sc. 2023, joined Wichita State University as a lecturer</p>
+<li><p>Srilekha Dodda, M.Sc. 2023, joined <i>Wichita State University</i> as a lecturer</p>
 </li>
 </ul>
 <ul>
-<li><p>Dr. Hassan ZivariFard, postdoctoral researcher 2022, joined Columbia University as a postdoctoral researcher</p>
+<li><p>Dr. Hassan ZivariFard, postdoctoral researcher 2022, joined <i>Columbia University</i> as a postdoctoral researcher</p>
 </li>
 </ul>
 </td>
