--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 From 2017 to 2023, I was an Assistant Professor in Electrical Engineering and Computer Science at Wichita State University, Wichita, KS. 
 
 From 2015 to 2017, I was a postdoctoral researcher at the <a href="http://www.ee.psu.edu/">Pennsylvania State University</a>, University Park, PA. I received the Ph.D. degree in Electrical Engineering from the <a href="https://www.ece.gatech.edu">Georgia Institute of Technology</a>, Atlanta, GA, in 2015, and the Engineering degree from <a href="http://www.centralesupelec.fr/en">Supélec</a>, Gif-sur-Yvette, France in 2011.<br /></p>
-<p>My research is supported by an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2047913">NSF-CAREER award</a>, an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1850227">NSF-CRII award</a>, an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2201825">NSF-CIF Collaborative Research award</a>, and an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2226447">NSF Convergence Accelerator award</a>.</p>
+<p>My research is supported by an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2047913">NSF-CAREER award</a>, an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1850227">NSF-CRII award</a>, an <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2201825">NSF-CIF Collaborative Research award</a>, and an <a href="index.html">NSF Convergence Accelerator award</a> (<a href="https://new.nsf.gov/news/nsf-dod-partner-advance-5g-technologies">Phase 1</a>, <a href="https://new.nsf.gov/news/nsf-invests-25m-advance-technologies">Phase 2</a>).</p>
 <h2>Announcement</h2>
 <div class="infoblock">
 <div class="blockcontent">
